crud operation on todos

--- a/src/main/resources/web/app/index.html
+++ b/src/main/resources/web/app/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 </head>
-  <body ng-app="webApp">
+  <body ng-app="sprayTodoApp">
     <!--[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
@@ -27,7 +27,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
-
+    <a href="/#/todos">Todos</a>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
@@ -64,6 +64,7 @@
         <!-- build:js({tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/todos.js"></script>
         <!-- endbuild -->
 </body>
 </html>
